Fix to spacing in subheader section

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -174,15 +174,20 @@ button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[dis
 }
 
 input[type=text] {
+  margin-bottom: 0;
   background-color: #F6F6F6;
   color: black;
   padding: 0.96rem;
   height: 3rem;
 }
 
+#addQuestionForm {
+  margin-bottom: 0;
+}
+
 .rating-margin {
   padding-bottom: 1rem;
-  height: 4.3rem;
+  height: 4.5rem;
 }
 
 //rating
